Header and main have been added and formatted.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- The Icon of Website -->
+  <link rel="shortcut icon" href="Pictures/1.png" type="image/x-icon">
+  <!-- Font Awesome Library Link (CSS) -->
   <link rel="stylesheet" href="fontawesome-free-6.5.2-web/css/all.css">
+  <!-- The source of file style -->
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <title>Team Neves</title>
+  <title>Neves</title>
 </head>
+
 <body>
-  
-  <i class="fa-solid fa-bars"></i>
 
+  <!-- The Container Of Header And Main -->
+  <div class="co-header-main">
+    <!-- The Header -->
+    <header>
+      <div class="box-logo">
+        <img src="Pictures/1.png" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
+      </div>
+      <nav>
+        <ul>
+          <li><a href="" class="active">الصفحة الرئيسية</a></li>
+          <li><a href="">قسم البرمجة</a></li>
+          <li><a href="">قسم التصميم</a></li>
+          <li><a href="">الفريق</a></li>
+          <li><a href="">من نحن</a></li>
+        </ul>
+      </nav>
+      <div class="co-menu">
+        <button class="btn-menu" id="btn-menu"><i class="fa-solid fa-bars"></i></button>
+        <div class="box-menu" id="box-menu">
+          <ul>
+            <li><a href="" class="active">الصفحة الرئيسية</a></li>
+            <li><a href="">قسم البرمجة</a></li>
+            <li><a href="">قسم التصميم</a></li>
+            <li><a href="">الفريق</a></li>
+            <li><a href="">من نحن</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
 
+    <!-- The Main -->
+    <main>
+      <div class="box-imge">
+        <img src="Pictures/3.svg" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
+      </div>
+      <div class="box-int">
+        <div class="box-hello">
+          <p>مرحبا نحن فريق</p>
+        </div>
+        <div class="box-neves">
+          <h1>نيفيس</h1>
+          <p>و نحن ايضا <span>مطورون ويب</span></p>
+        </div>
+        <div class="box-this">
+          <p>موقع فريق نيفيس</p>
+        </div>
+        <div class="box-icons">
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+        </div>
+        <div class="box-go">
+          <a href="">اذهب الى الفريق</a>
+        </div>
+      </div>
+    </main>
+  </div>
+
+  <!-- The Section 1 -->
+  <section class="section-1"></section>
+
+  <!-- The Section 2 -->
+  <section class="section-2"></section>
+
+  <!-- The Footer -->
+  <footer></footer>
+
+  <!-- Font Awesome Library Link (JS) -->
   <script src="fontawesome-free-6.5.2-web/js/all.js"></script>
 
+  <!-- Link script.js file -->
   <script src="script.js"></script>
 
 </body>
+
 </html>
