Some improvements have been added to Main.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="fontawesome-free-6.5.2-web/css/all.css">
   <!-- The source of file style -->
   <link rel="stylesheet" href="style.css">
-  <title>Neves</title>
+  <title>موقغ فريق نيفيس</title>
 </head>
 
 <body>
