Other section files have been added.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="footer/footer.css">
   <!-- The source of file style -->
   <link rel="stylesheet" href="style.css">
-  <title>موقغ فريق نيفيس</title>
+  <title>الرئيسية - موقع فريق نيفيس</title>
 </head>
 
 <body>
