Basic formatting has been added to all CSS pages and links have been added to HTML pages.

--- a/PD/index.html
+++ b/PD/index.html
@@ -1,3 +1,13 @@
+<!-- Neves Team Project -->
+
+
+
+<!-- You are now on the programming section page -->
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="ar">
 
@@ -5,12 +15,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- The Icon of Website -->
+  <link rel="shortcut icon" href="Pictures/1.png" type="image/x-icon">
+  <!-- Font Awesome Library Link (CSS) -->
+  <link rel="stylesheet" href="../fontawesome-free-6.5.2-web/css/all.css">
+  <!-- Link Header (CSS) -->
+  <link rel="stylesheet" href="../header/headerCss.css">
+  <!-- Link Footer (CSS) -->
+  <link rel="stylesheet" href="../footer/footer.css">
   <!-- The source of file style -->
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>قسم البرمجة - موقع فريق نيفيس</title>
 </head>
 
 <body>
+
+  <!-- Font Awesome Library Link (JS) -->
+  <script src="../fontawesome-free-6.5.2-web/js/all.js"></script>
+
+  <!-- Link Header (JS) -->
+  <script src="../header/headerJs.js"></script>
 
   <!-- Link script.js file -->
   <script src="script.js"></script>
