--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<!-- Nevis Team Project -->
+<!-- Neves Team Project -->
+
+
+
+<!-- You are now on the Home page -->
+
+
 
 
 
@@ -33,22 +39,22 @@
         <div class="box-menu" id="box-menu">
           <nav>
             <ul>
-              <li><a href="" class="active">الصفحة الرئيسية</a></li>
-              <li><a href="">قسم البرمجة</a></li>
-              <li><a href="">قسم التصميم</a></li>
-              <li><a href="">الفريق</a></li>
-              <li><a href="">من نحن</a></li>
+              <li><a href="index.html" class="active">الصفحة الرئيسية</a></li>
+              <li><a href="PD/index.html">قسم البرمجة</a></li>
+              <li><a href="DD/index.html">قسم التصميم</a></li>
+              <li><a href="Team/index.html">الفريق</a></li>
+              <li><a href="WWA/index.html">من نحن</a></li>
             </ul>
           </nav>
         </div>
       </div>
       <nav>
         <ul>
-          <li><a href="" class="active">الصفحة الرئيسية</a></li>
-          <li><a href="">قسم البرمجة</a></li>
-          <li><a href="">قسم التصميم</a></li>
-          <li><a href="">الفريق</a></li>
-          <li><a href="">من نحن</a></li>
+          <li><a href="index.html" class="active">الصفحة الرئيسية</a></li>
+          <li><a href="PD/index.html">قسم البرمجة</a></li>
+          <li><a href="DD/index.html">قسم التصميم</a></li>
+          <li><a href="Team/index.html">الفريق</a></li>
+          <li><a href="WWA/index.html">من نحن</a></li>
         </ul>
       </nav>
       <div class="box-logo">
@@ -223,11 +229,11 @@
           <div class="existing">
             <nav>
               <ul>
-                <li><a href="" class="active">الصفحة الرئيسية</a></li>
-                <li><a href="">قسم البرمجة</a></li>
-                <li><a href="">قسم التصميم</a></li>
-                <li><a href="">الفريق</a></li>
-                <li><a href="">من نحن</a></li>
+                <li><a href="index.html" class="active">الصفحة الرئيسية</a></li>
+                <li><a href="PD/index.html">قسم البرمجة</a></li>
+                <li><a href="DD/index.html">قسم التصميم</a></li>
+                <li><a href="Team/index.html">الفريق</a></li>
+                <li><a href="WWA/index.html">من نحن</a></li>
               </ul>
             </nav>
           </div>
