Some bugs have been fixed (Home)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Link Header (CSS) -->
   <link rel="stylesheet" href="header/headerCss.css">
   <!-- Link Footer (CSS) -->
-  <link rel="stylesheet" href="footer/footer.css">
+  <link rel="stylesheet" href="footer/footerCss.css">
   <!-- The source of file style -->
   <link rel="stylesheet" href="style.css">
   <title>الرئيسية - موقع فريق نيفيس</title>
@@ -194,6 +194,10 @@
       </div>
       <div class="box-contents">
         <div class="box-content box-content-1">
+          <div class="box-animations">
+            <div class="animation-1"></div>
+            <div class="animation-2"></div>
+          </div>
           <div class="box-imge">
             <img src="Pictures/10.webp" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
           </div>
@@ -278,6 +282,9 @@
 
   <!-- Link Header (JS) -->
   <script src="header/headerJs.js"></script>
+
+  <!-- Link Footer (JS) -->
+  <script src="footer/footerJs.js"></script>
 
   <!-- Link script.js file -->
   <script src="script.js"></script>
