Some things have been added and some improvements have been made to the Home page and the comments in the project have been modified.

--- a/Team/index.html
+++ b/Team/index.html
@@ -1,8 +1,7 @@
-<!-- Neves Team Project -->
-
-
-
-<!-- You are now on the team page -->
+<!-- ( Neves Team Project )
+   ===============================================================
+   You are now on the team page
+   =============================================================== -->
 
 
 
