--- a/WWA/index.html
+++ b/WWA/index.html
@@ -1,8 +1,7 @@
-<!-- Neves Team Project -->
-
-
-
-<!-- You are now on the About Us page -->
+<!-- ( Neves Team Project )
+   ===============================================================
+   You are now on the About Us page
+   =============================================================== -->
 
 
 
