--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!-- Neves Team Project -->
-
-
-
-<!-- You are now on the Home page -->
+<!-- ( Neves Team Project )
+   ===============================================================
+   You are now on the home page
+   =============================================================== -->
 
 
 
@@ -39,7 +38,7 @@
         <div class="box-menu" id="box-menu">
           <nav>
             <ul>
-              <li><a href="index.html" class="active">الصفحة الرئيسية</a></li>
+              <li><a href="index.html" class="active">الرئيسية</a></li>
               <li><a href="PD/index.html">قسم البرمجة</a></li>
               <li><a href="DD/index.html">قسم التصميم</a></li>
               <li><a href="Team/index.html">الفريق</a></li>
@@ -50,7 +49,7 @@
       </div>
       <nav>
         <ul>
-          <li><a href="index.html" class="active">الصفحة الرئيسية</a></li>
+          <li><a href="index.html" class="active">الرئيسية</a></li>
           <li><a href="PD/index.html">قسم البرمجة</a></li>
           <li><a href="DD/index.html">قسم التصميم</a></li>
           <li><a href="Team/index.html">الفريق</a></li>
@@ -82,7 +81,7 @@
           <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
         <div class="box-go">
-          <a href="">اذهب الى الفريق</a>
+          <li><a href="">اذهب الى الفريق</a></li>
         </div>
       </div>
       <div class="box-imge">
@@ -233,7 +232,7 @@
           <div class="existing">
             <nav>
               <ul>
-                <li><a href="index.html" class="active">الصفحة الرئيسية</a></li>
+                <li><a href="index.html" class="active">الرئيسية</a></li>
                 <li><a href="PD/index.html">قسم البرمجة</a></li>
                 <li><a href="DD/index.html">قسم التصميم</a></li>
                 <li><a href="Team/index.html">الفريق</a></li>
@@ -272,10 +271,19 @@
         </div>
       </div>
       <div class="box-bottom">
-        <h1> 2024 - 2024 &copy;</h1>
+        <h1>2024 - 2024 &copy; | <span>جميع الحقوق محفوظة</span></h1>
       </div>
     </div>
   </footer>
+
+    <!-- Train -->
+  <div class="train">
+    <button class="arrow-up"><i class="fa-solid fa-arrow-up"></i></button>
+    <button class="people-group"><i class="fa-solid fa-people-group"></i></button>
+    <button class="figma"><i class="fa-brands fa-figma"></i></button>
+    <button class="server"><i class="fa-solid fa-server"></i></button>
+    <button class="arrow-down"><i class="fa-solid fa-arrow-down"></i></button>
+  </div>
 
   <!-- Font Awesome Library Link (JS) -->
   <script src="fontawesome-free-6.5.2-web/js/all.js"></script>
