--- a/DD/index.html
+++ b/DD/index.html
@@ -1,8 +1,7 @@
-<!-- Neves Team Project -->
-
-
-
-<!-- You are now on the design section page -->
+<!-- ( Neves Team Project )
+   ===============================================================
+   You are now on the design section page
+   =============================================================== -->
 
 
 
