--- a/PD/index.html
+++ b/PD/index.html
@@ -1,8 +1,7 @@
-<!-- Neves Team Project -->
-
-
-
-<!-- You are now on the programming section page -->
+<!-- ( Neves Team Project )
+   ===============================================================
+   You are now on the team section page
+   =============================================================== -->
 
 
 
