Some bugs have been fixed.

--- a/DD/index.html
+++ b/DD/index.html
@@ -22,7 +22,7 @@
   <!-- Link Header (CSS) -->
   <link rel="stylesheet" href="../header/headerCss.css">
   <!-- Link Footer (CSS) -->
-  <link rel="stylesheet" href="../footer/footer.css">
+  <link rel="stylesheet" href="../footer/footerCss.css">
   <!-- The source of file style -->
   <link rel="stylesheet" href="style.css">
   <title>قسم التصميم - موقع فريق نيفيس</title>
@@ -35,6 +35,9 @@
 
   <!-- Link Header (JS) -->
   <script src="../header/headerJs.js"></script>
+
+    <!-- Link Header (JS) -->
+    <script src="../footer/footerJs.js"></script>
 
   <!-- Link script.js file -->
   <script src="script.js"></script>
