Some fixes and improvements have been added to the (Home) page.

--- a/index.html
+++ b/index.html
@@ -193,10 +193,6 @@
       </div>
       <div class="box-contents">
         <div class="box-content box-content-1">
-          <div class="box-animations">
-            <div class="animation-1"></div>
-            <div class="animation-2"></div>
-          </div>
           <div class="box-imge">
             <img src="Pictures/10.webp" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
           </div>
@@ -205,7 +201,7 @@
             <p>سيرفر نيفيس هو سيرفر عام للمبرمجين ولاعبين القيمنق وعامة الناس</p>
           </div>
           <div class="box-btn">
-            <li><a href="https://discord.gg/9D29H9szeC" target="_blank" rel="noopener noreferrer">دخول</a></li>
+            <li><a href="https://discord.gg/9D29H9szeC" target="_blank" rel="noopener noreferrer">دخول <i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
           </div>
         </div>
         <div class="box-content box-content-2">
@@ -217,7 +213,7 @@
             <p>سيرفر كريتيف نيتورك هو سيرفر خاص بالمبرمجين ويتفور ايضا فيه تعليم للبرمجة</p>
           </div>
           <div class="box-btn">
-            <li><a href="https://discord.gg/B9rn779bD5" target="_blank" rel="noopener noreferrer">دخول</a></li>
+            <li><a href="https://discord.gg/B9rn779bD5" target="_blank" rel="noopener noreferrer">دخول <i class="fa-solid fa-arrow-up-right-from-square"></i></a></li>
           </div>
         </div>
       </div>
