--- a/DD/index.html
+++ b/DD/index.html
@@ -28,49 +28,63 @@
   <title>قسم التصميم - موقع فريق نيفيس</title>
 </head>
 
-<body> 
-    <!-- The Header -->
-    <header class="up-down">
-      <div class="co-menu">
-        <button class="btn-menu" id="btn-menu"><i class="fa-solid fa-bars"></i></button>
-        <div class="box-menu" id="box-menu">
-          <nav>
-            <ul>
-              <li><a href="index.html" class="active">الرئيسية</a></li>
-              <li><a href="PD/index.html">قسم البرمجة</a></li>
-              <li><a href="DD/index.html">قسم التصميم</a></li>
-              <li><a href="Team/index.html">الفريق</a></li>
-              <li><a href="WWA/index.html">من نحن</a></li>
-            </ul>
-          </nav>
-        </div>
+<body>
+  <!-- The Header -->
+  <header class="up-down">
+    <div class="co-menu">
+      <button class="btn-menu" id="btn-menu"><i class="fa-solid fa-bars"></i></button>
+      <div class="box-menu" id="box-menu">
+        <nav>
+          <ul>
+            <li><a href="index.html" class="active">الرئيسية</a></li>
+            <li><a href="PD/index.html">قسم البرمجة</a></li>
+            <li><a href="DD/index.html">قسم التصميم</a></li>
+            <li><a href="Team/index.html">الفريق</a></li>
+            <li><a href="WWA/index.html">من نحن</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <ul>
-          <li><a href="index.html" class="active">الرئيسية</a></li>
-          <li><a href="PD/index.html">قسم البرمجة</a></li>
-          <li><a href="DD/index.html">قسم التصميم</a></li>
-          <li><a href="Team/index.html">الفريق</a></li>
-          <li><a href="WWA/index.html">من نحن</a></li>
-        </ul>
-      </nav>
-      <div class="box-logo">
-        <img src="Pictures/1.png" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
-      </div>
-    </header>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html" class="active">الرئيسية</a></li>
+        <li><a href="PD/index.html">قسم البرمجة</a></li>
+        <li><a href="DD/index.html">قسم التصميم</a></li>
+        <li><a href="Team/index.html">الفريق</a></li>
+        <li><a href="WWA/index.html">من نحن</a></li>
+      </ul>
+    </nav>
+    <div class="box-logo">
+      <img src="Pictures/1.png" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
+    </div>
+  </header>
 
 
   <!-- Font Awesome Library Link (JS) -->
   <script src="../fontawesome-free-6.5.2-web/js/all.js"></script>
 
   <!-- Link Header (JS) -->
-  <script src="../header/headerJs.js"></script> 
+  <script src="../header/headerJs.js"></script>
 
-    <!-- Link Header (JS) -->
-    <script src="../footer/footerJs.js"></script>
+  <!-- Link Header (JS) -->
+  <script src="../footer/footerJs.js"></script>
 
   <!-- Link script.js file -->
   <script src="script.js"></script> 
+  <section class="container">
+    <div class="slider-wrapper">
+      <div class="slider">
+        <img id="slide-1" src="Pictures/p1.png" />
+        <img id="slide-2" src="Pictures/p2.png" />
+        <img id="slide-3" src="Pictures/p3.png" />
+      div>
+      <div class="slider-nav">
+        <a href="#slide-1"></a>
+        <a href="#slide-2"></a>
+        <a href="#slide-3"></a>
+      </div>
+    </div>
+  </section>
 
 </body>
 
