--- a/DD/index.html
+++ b/DD/index.html
@@ -70,21 +70,27 @@
   <script src="../footer/footerJs.js"></script>
 
   <!-- Link script.js file -->
-  <script src="script.js"></script> 
-  <section class="container">
-    <div class="slider-wrapper">
-      <div class="slider">
-        <img id="slide-1" src="Pictures/p1.png" />
-        <img id="slide-2" src="Pictures/p2.png" />
-        <img id="slide-3" src="Pictures/p3.png" />
-      div>
-      <div class="slider-nav">
-        <a href="#slide-1"></a>
-        <a href="#slide-2"></a>
-        <a href="#slide-3"></a>
-      </div>
+ <section class="container">
+  <div class="slider-wrapper">
+    <div class="slider"> 
+      <img id="slider1" src="Pictures/p1.png" alt="image for the home"> 
+      <img id="slider1" src="Pictures/p2.png" alt="image for the home">
+      <img id="slider1" src="Pictures/p3.png"alt=" image for the home">
+      <img id="slider1" src="Pictures/p4.png" alt="image for the home">
+      
     </div>
-  </section>
+  </div class="slider-nav">
+  <a href="#slide-1"></a>
+  <a href="#slide-2"></a>
+  <a href="#slide-3"></a>>
+  <a href="#slide-4"></a>> 
+  <div>
+    
+  </div>
+ </section>
+   
+
+ </section>
 
 </body>
 
