--- a/PD/index.html
+++ b/PD/index.html
@@ -28,6 +28,85 @@
 </head>
 
 <body>
+  <header class="up-down">
+    <div class="co-menu">
+      <button class="btn-menu" id="btn-menu"><i class="fa-solid fa-bars"></i></button>
+      <div class="box-menu" id="box-menu">
+        <nav>
+          <ul>
+            <li><a href="index.html">الرئيسية</a></li>
+            <li><a href="PD/index.html" class="active">قسم البرمجة</a></li>
+            <li><a href="DD/index.html">قسم التصميم</a></li>
+            <li><a href="Team/index.html">الفريق</a></li>
+            <li><a href="WWA/index.html">من نحن</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">الرئيسية</a></li>
+        <li><a href="PD/index.html" class="active">قسم البرمجة</a></li>
+        <li><a href="DD/index.html">قسم التصميم</a></li>
+        <li><a href="Team/index.html">الفريق</a></li>
+        <li><a href="WWA/index.html">من نحن</a></li>
+      </ul>
+    </nav>
+    <div class="box-logo">
+      <img src="Pictures/1.png" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
+    </div>
+  </header>
+
+  <footer>
+    <div class="co-contents">
+      <div class="box-top">
+        <div class="box-part">
+          <div class="existing">
+            <nav>
+              <ul>
+                <li><a href="index.html">الرئيسية</a></li>
+                <li><a href="PD/index.html" class="active">قسم البرمجة</a></li>
+                <li><a href="DD/index.html">قسم التصميم</a></li>
+                <li><a href="Team/index.html">الفريق</a></li>
+                <li><a href="WWA/index.html">من نحن</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="box-part">
+          <div class="existing">
+            <ul>
+              <li><a href="">فيس بوك</a></li>
+              <li><a href="">اكس</a></li>
+              <li><a href="">انستا</a></li>
+              <li><a href="">لينكدإن</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="box-part">
+          <div class="existing">
+            <ul>
+              <li><a href="">مساعدة</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="box-logo">
+          <div class="box-imge">
+            <img src="Pictures/1.png" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
+          </div>
+          <div class="box-icons">
+            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="box-bottom">
+        <h1>2024 - 2024 &copy; | <span>جميع الحقوق محفوظة</span></h1>
+      </div>
+    </div>
+  </footer>
 
   <!-- Font Awesome Library Link (JS) -->
   <script src="../fontawesome-free-6.5.2-web/js/all.js"></script>
@@ -35,8 +114,8 @@
   <!-- Link Header (JS) -->
   <script src="../header/headerJs.js"></script>
 
-    <!-- Link Header (JS) -->
-    <script src="../footer/footerJs.js"></script>
+  <!-- Link Header (JS) -->
+  <script src="../footer/footerJs.js"></script>
 
   <!-- Link script.js file -->
   <script src="script.js"></script>
