--- a/DD/index.html
+++ b/DD/index.html
@@ -58,6 +58,64 @@
       <img src="Pictures/1.png" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
     </div>
   </header>
+  <main>
+    <div class="box-content">
+      <button class="btn-right"><i class="fa-solid fa-chevron-right"></i></button>
+      <img src="Pictures/p1.png" alt="">
+      <button class="btn-left"><i class="fa-solid fa-chevron-left"></i></button>
+    </div>
+  
+  </main>
+  <footer>
+    <div class="co-contents">
+      <div class="box-top">
+        <div class="box-part">
+          <div class="existing">
+            <nav>
+              <ul>
+                <li><a href="index.html" class="active">الرئيسية</a></li>
+                <li><a href="PD/index.html">قسم البرمجة</a></li>
+                <li><a href="DD/index.html">قسم التصميم</a></li>
+                <li><a href="Team/index.html">الفريق</a></li>
+                <li><a href="WWA/index.html">من نحن</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="box-part">
+          <div class="existing">
+            <ul>
+              <li><a href="">فيس بوك</a></li>
+              <li><a href="">اكس</a></li>
+              <li><a href="">انستا</a></li>
+              <li><a href="">لينكدإن</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="box-part">
+          <div class="existing">
+            <ul>
+              <li><a href="">مساعدة</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="box-logo">
+          <div class="box-imge">
+            <img src="Pictures/1.png" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
+          </div>
+          <div class="box-icons">
+            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="box-bottom">
+        <h1>2024 - 2024 &copy; | <span>جميع الحقوق محفوظة</span></h1>
+      </div>
+    </div>
+  </footer>
 
 
   <!-- Font Awesome Library Link (JS) -->
@@ -66,32 +124,12 @@
   <!-- Link Header (JS) -->
   <script src="../header/headerJs.js"></script>
 
-  <!-- Link Header (JS) -->
+  <!-- Link Footer (JS) -->
   <script src="../footer/footerJs.js"></script>
 
   <!-- Link script.js file -->
-  <section class="container">
-    <div class="slider-wrapper">
-      <div class="slider" > 
-
-        <img id="slider1" src="Pictures/p1.png" alt="image for the home">
-        <img id="slider1" src="Pictures/p2.png" alt="image for the home">
-        <img id="slider1" src="Pictures/p3.png" alt=" image for the home">
-        <img id="slider1" src="Pictures/p4.png" alt="image for the home">
-
-      </div>
-    </div class="slider-nav">
-    <a href="#slide-1"></a>
-    <a href="#slide-2"></a>
-    <a href="#slide-3"></a>
-    <a href="#slide-4"></a>
-    <div>
-
-    </div>
-  </section>
-
-
-  </section>
+  <script src="script.js"> </script>
+  
 
 </body>
 
