--- a/PD/index.html
+++ b/PD/index.html
@@ -22,6 +22,9 @@
   <link rel="stylesheet" href="../header/headerCss.css">
   <!-- Link Footer (CSS) -->
   <link rel="stylesheet" href="../footer/footerCss.css">
+  <!--Bootstrap library-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- The source of file style -->
   <link rel="stylesheet" href="style.css">
   <title>قسم البرمجة - موقع فريق نيفيس</title>
@@ -45,7 +48,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html">الرئيسية</a></li>
+        <li><a href="../index.html">الرئيسية</a></li>
         <li><a href="PD/index.html" class="active">قسم البرمجة</a></li>
         <li><a href="DD/index.html">قسم التصميم</a></li>
         <li><a href="Team/index.html">الفريق</a></li>
@@ -56,7 +59,62 @@
       <img src="Pictures/1.png" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
     </div>
   </header>
+  <main>
+    <h2 class="text-center">اللغات البرمجة المستخدمة</h2>
 
+
+    <div class="container-fluid">
+      <div class="row justify-content-around">
+
+        <div class="card " style="width: 18rem;">
+          <img src="Pictures/javascript-2.png" class="card-img-top" alt="جافا سكربت">
+          <div class="card-body">
+            <h5 class="card-title ">JAVA SCRIPT <i class="fa-brands fa-js"></i></h5>
+            <p class="card-text">لغة جافا سكريبت هي لغة برمجة تسمح لك بتنفيذ ميزات عديدة في صفحات الويب. ترى ذلك في
+              الصفحات
+              التي لا تكتفي بعرض معلومات ثابتة أو تلك التي تحدّث محتواها تلقائيًا مع الوقت أو تعرض خرائط تفاعلية أو رسوم
+              ثنائية وثلاثية البعد. تُعد جافا سكريبت الطبقة الثالثة من طبقات الكعكة التي تمثّل تقنيات الويب المعيارية
+
+            </p>
+            <a href="https://en.wikipedia.org/wiki/JavaScript" class="card-link" target="_blank">Java Script</a>
+          </div>
+        </div>
+
+        <div class="card " style="width: 18rem;">
+          <img src="Pictures/html-logo.png" class="card-img-top" alt="html">
+          <div class="card-body">
+            <h5 class="card-title ">HTML5 <i class="fa-brands fa-html5"></i></i></h5>
+            <p class="card-text">HTML هي لغة بسيطة جداً تستخدم لوصف ما تحتويه صفحات الويب ( Web Pages ) و معنى ذلك أنها
+              تستخدم لتحديد العناصر الموجودة في الصفحة مثل العناوين، الفقرات، الأزرار، الصور، القوائم، الجداول و غيرها
+              من الأشياء التي يمكن إضافتها في صفحات الويب.
+
+              إذاً نستخدم هذه اللغة لهدف واحد فقط و هو تحديد بنية صفحات الويب ( Pages Structure ).
+
+            </p>
+            <a href="https://en.wikipedia.org/wiki/HTML" class="card-link" target="_blank">HTML</a>
+          </div>
+        </div>
+
+        <div class="card " style="width: 18rem;">
+          <img src="Pictures/css-pd.png" class="card-img-top" alt="css">
+          <div class="card-body">
+            <h5 class="card-title ">CSS <i class="fa-brands fa-css3"></i></h5>
+            <p class="card-text">بشكل عام، CSS تعتبر لغة تصميم ( Styling Language ) و ليس لغة برمجة ( Programming
+              Language ) فهي تستخدم في تصميم صفحات الويب التي يتم بناؤها بواسطة HTML أو الصفحات التي يتم بناؤها بواسطة
+              XML.
+            </p>
+            <a href="https://en.wikipedia.org/wiki/CSS" class="card-link" target="_blank">CSS</a>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+
+  </main>
+
+  <!-- The Footer -->
   <footer>
     <div class="co-contents">
       <div class="box-top">
@@ -107,58 +165,6 @@
       </div>
     </div>
   </footer>
-
-    <!-- The Footer -->
-    <footer>
-      <div class="co-contents">
-        <div class="box-top">
-          <div class="box-part">
-            <div class="existing">
-              <nav>
-                <ul>
-                  <li><a href="index.html" class="active">الرئيسية</a></li>
-                  <li><a href="PD/index.html">قسم البرمجة</a></li>
-                  <li><a href="DD/index.html">قسم التصميم</a></li>
-                  <li><a href="Team/index.html">الفريق</a></li>
-                  <li><a href="WWA/index.html">من نحن</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-          <div class="box-part">
-            <div class="existing">
-              <ul>
-                <li><a href="">فيس بوك</a></li>
-                <li><a href="">اكس</a></li>
-                <li><a href="">انستا</a></li>
-                <li><a href="">لينكدإن</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="box-part">
-            <div class="existing">
-              <ul>
-                <li><a href="">مساعدة</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="box-logo">
-            <div class="box-imge">
-              <img src="Pictures/1.png" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
-            </div>
-            <div class="box-icons">
-              <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-              <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
-              <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-              <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
-            </div>
-          </div>
-        </div>
-        <div class="box-bottom">
-          <h1>2024 - 2024 &copy; | <span>جميع الحقوق محفوظة</span></h1>
-        </div>
-      </div>
-    </footer>
 
   <!-- Font Awesome Library Link (JS) -->
   <script src="../fontawesome-free-6.5.2-web/js/all.js"></script>
