finishif style pd page and add some link to it

--- a/PD/index.html
+++ b/PD/index.html
@@ -60,13 +60,13 @@
     </div>
   </header>
   <main>
-    <h2 class="text-center">اللغات البرمجة المستخدمة</h2>
+    <h2 class="text-center">اللغات البرمجية المستخدمة</h2>
 
 
     <div class="container-fluid">
       <div class="row justify-content-around">
 
-        <div class="card " style="width: 18rem;">
+        <div class="card col-md-3">
           <img src="Pictures/javascript-2.png" class="card-img-top" alt="جافا سكربت">
           <div class="card-body">
             <h5 class="card-title ">JAVA SCRIPT <i class="fa-brands fa-js"></i></h5>
@@ -80,10 +80,10 @@
           </div>
         </div>
 
-        <div class="card " style="width: 18rem;">
+        <div class="card col-md-3">
           <img src="Pictures/html-logo.png" class="card-img-top" alt="html">
           <div class="card-body">
-            <h5 class="card-title ">HTML5 <i class="fa-brands fa-html5"></i></i></h5>
+            <h5 class="card-title ">HTML5 <i class="fa-brands fa-html5"></i></h5>
             <p class="card-text">HTML هي لغة بسيطة جداً تستخدم لوصف ما تحتويه صفحات الويب ( Web Pages ) و معنى ذلك أنها
               تستخدم لتحديد العناصر الموجودة في الصفحة مثل العناوين، الفقرات، الأزرار، الصور، القوائم، الجداول و غيرها
               من الأشياء التي يمكن إضافتها في صفحات الويب.
@@ -95,7 +95,7 @@
           </div>
         </div>
 
-        <div class="card " style="width: 18rem;">
+        <div class="card col-md-3">
           <img src="Pictures/css-pd.png" class="card-img-top" alt="css">
           <div class="card-body">
             <h5 class="card-title ">CSS <i class="fa-brands fa-css3"></i></h5>
@@ -122,7 +122,7 @@
           <div class="existing">
             <nav>
               <ul>
-                <li><a href="index.html">الرئيسية</a></li>
+                <li><a href="../index.html">الرئيسية</a></li>
                 <li><a href="PD/index.html" class="active">قسم البرمجة</a></li>
                 <li><a href="DD/index.html">قسم التصميم</a></li>
                 <li><a href="Team/index.html">الفريق</a></li>
@@ -153,10 +153,10 @@
             <img src="Pictures/1.png" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
           </div>
           <div class="box-icons">
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+            <a href="http://www.x.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+            <a href="http://www.linkedin.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
           </div>
         </div>
       </div>
