--- a/DD/index.html
+++ b/DD/index.html
@@ -57,14 +57,19 @@
     <div class="box-logo">
       <img src="Pictures/1.png" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
     </div>
-  </header>
+  </header> 
   <main>
-    <div class="box-content">
-      <button class="btn-right"><i class="fa-solid fa-chevron-right"></i></button>
-      <img src="Pictures/p1.png" alt="">
-      <button class="btn-left"><i class="fa-solid fa-chevron-left"></i></button>
+    <!-- The Exhibition-->
+    <button class="btn-left"><i class="fa-solid fa-chevron-left"></i></button>
+    <div class="box-videos">
+      <img src="Pictures/p1.png" class="active" alt="">
+      <img src="Pictures/p2.png" alt="">
+      <img src="Pictures/p3.png" alt="">
+      <img src="Pictures/p4.png" alt="">
+
     </div>
-  
+    <button class="btn-right"><i class="fa-solid fa-chevron-right"></i></button>
+
   </main>
   <footer>
     <div class="co-contents">
@@ -104,10 +109,10 @@
             <img src="Pictures/1.png" alt="خطأ في تحميل الصورة يرجى التأكد من اتصالك في الانترنت">
           </div>
           <div class="box-icons">
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-            <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100049595358017" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://x.com/Ahmed639249" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://www.instagram.com/2hmed_ma/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/onboarding/start/people-you-may-know/new/?source=coreg" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
           </div>
         </div>
       </div>
@@ -129,7 +134,7 @@
 
   <!-- Link script.js file -->
   <script src="script.js"> </script>
-  
+
 
 </body>
 
