--- a/Team/index.html
+++ b/Team/index.html
@@ -41,6 +41,58 @@
 
   <!-- Link script.js file -->
   <script src="script.js"></script>
+  <!-- The Section 1 -->
+  <section class="section-1">
+    <div class="co-contents">
+      <div class="box-title">
+        <h1>اعضاء الفريق</h1>
+        <p>جميع اعضاء فريق نيفيس</p>
+      </div>
+      <div class="box-contents">
+        <div class="box-content box-content-1">
+          <div class="box-icon">
+            <i class="fa-solid fa-user"></i>
+          </div>
+          <div class="box-name">
+            <h1>يزن</h1>
+          </div>
+        </div>
+        <div class="box-content box-content-2">
+          <div class="box-icon">
+            <i class="fa-solid fa-user"></i>
+          </div>
+          <div class="box-name">
+            <h1>الشمري</h1>
+          </div>
+        </div>
+        <div class="box-content box-content-3">
+          <div class="box-icon">
+            <i class="fa-solid fa-user"></i>
+          </div>
+          <div class="box-name">
+            <h1>احمد</h1>
+          </div>
+        </div>
+        <div class="box-content box-content-4">
+          <div class="box-icon">
+            <i class="fa-solid fa-user"></i>
+          </div>
+          <div class="box-name">
+            <h1>احمد</h1>
+          </div>
+        </div>
+        <div class="box-content box-content-5">
+          <div class="box-icon">
+            <i class="fa-solid fa-user"></i>
+          </div>
+          <div class="box-name">
+            <h1>سلطان</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 </body>
 
