--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Font Awesome Library Link (CSS) -->
   <link rel="stylesheet" href="fontawesome-free-6.5.2-web/css/all.css">
   <!-- Link Header (CSS) -->
-  <link rel="stylesheet" href="/header/headerCss.css">
+  <link rel="stylesheet" href="../Neves-Team/header/headerCss.css">
   <!-- Link Footer (CSS) -->
   <link rel="stylesheet" href="../Neves-Team/footer/footerCss.css">
   <!-- The source of file style -->
