--- a/DD/index.html
+++ b/DD/index.html
@@ -68,7 +68,8 @@
       <img src="Pictures/p4.png" alt="">
 
     </div>
-    <button class="btn-right"><i class="fa-solid fa-chevron-right"></i></button>
+    <button class="btn-right"><i class="fa-solid fa-chevron-right"></i></button> 
+    <img src="Pictures/ppp1 (1).png" alt="">
 
   </main>
   <footer>
