--- a/PD/index.html
+++ b/PD/index.html
@@ -37,11 +37,11 @@
       <div class="box-menu" id="box-menu">
         <nav>
           <ul>
-            <li><a href="index.html">الرئيسية</a></li>
-            <li><a href="PD/index.html" class="active">قسم البرمجة</a></li>
-            <li><a href="DD/index.html">قسم التصميم</a></li>
-            <li><a href="Team/index.html">الفريق</a></li>
-            <li><a href="WWA/index.html">من نحن</a></li>
+            <li><a href="../index.html">الرئيسية</a></li>
+            <li><a href="../PD/index.html" class="active">قسم البرمجة</a></li>
+            <li><a href="../DD/index.html">قسم التصميم</a></li>
+            <li><a href="../Team/index.html">الفريق</a></li>
+            <li><a href="../WWA/index.html">من نحن</a></li>
           </ul>
         </nav>
       </div>
@@ -49,10 +49,10 @@
     <nav>
       <ul>
         <li><a href="../index.html">الرئيسية</a></li>
-        <li><a href="PD/index.html" class="active">قسم البرمجة</a></li>
-        <li><a href="DD/index.html">قسم التصميم</a></li>
-        <li><a href="Team/index.html">الفريق</a></li>
-        <li><a href="WWA/index.html">من نحن</a></li>
+        <li><a href="../PD/index.html" class="active">قسم البرمجة</a></li>
+        <li><a href="../DD/index.html">قسم التصميم</a></li>
+        <li><a href="../Team/index.html">الفريق</a></li>
+        <li><a href="W../WWA/index.html">من نحن</a></li>
       </ul>
     </nav>
     <div class="box-logo">
