--- a/DD/index.html
+++ b/DD/index.html
@@ -66,10 +66,12 @@
       <img src="Pictures/p2.png" alt="">
       <img src="Pictures/p3.png" alt="">
       <img src="Pictures/p4.png" alt="">
+      <img src="Pictures/ppp1 (1).png" alt="">
+      <img src="Pictures/ppp  (2).png" alt="">
 
     </div>
     <button class="btn-right"><i class="fa-solid fa-chevron-right"></i></button> 
-    <img src="Pictures/ppp1 (1).png" alt="">
+    
 
   </main>
   <footer>
